syntax = "proto3";

package douyin.extra.first;
option go_package = "../pb;pb";
import "user.proto";
import "video.proto";

// 点赞接口请求
message douyin_favorite_action_request {
  int64 self_user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

// 点赞接口响应
message douyin_favorite_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

// 点赞列表接口请求
message douyin_favorite_list_request {
  int64 user_id = 1; // 用户id
}

// 点赞列表接口响应
message douyin_favorite_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated core.Video video_list = 3; // 用户点赞视频列表
}

// 点赞数量接口请求
message douyin_favorite_count_request {
  int64 user_id = 1; // 用户id
}

// 点赞数量接口响应
message douyin_favorite_count_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int32 fav_count = 3; // 点赞数量(赞过)
  int32 get_fav_count = 4; // 获赞数量(被赞过)
}

// 评论信息
message Comment {
  int64 id = 1; // 评论id
  User user = 2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd
}

// 评论操作请求
message douyin_comment_action_request {
  int64 self_user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
  ActionType action_type = 3;
  string comment_text = 4;
  int64 comment_id = 5;
}

// 操作评论类型枚举
enum ActionType {
  SAVE = 0;
  DELETE = 1;
}

// 评论操作响应
message douyin_comment_action_response{
  int64 status_code = 1;
  string status_msg = 2;
  Comment comment = 3;
}

// 评论列表请求
message douyin_comment_list_request {
  int64 self_user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
}

// 评论列表响应
message douyin_comment_list_response {
  int64 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; //string or null 返回状态描述
  repeated Comment comment_list = 3; //array[object (Comment) {4}] or null 评论列表
}

// RPC接口
service DouyinVideoInteractionService {
  // 点赞操作
  rpc ActionFavorite(douyin_favorite_action_request) returns (douyin_favorite_action_response);
  // 点赞列表
  rpc ListFavorite(douyin_favorite_list_request) returns (douyin_favorite_list_response);
  // 点赞数量
  rpc CountFavorite(douyin_favorite_count_request) returns (douyin_favorite_count_response);
  // 评论操作
  rpc ActionComment(douyin_comment_action_request) returns (douyin_comment_action_response);
  // 评论列表
  rpc ListComment(douyin_comment_list_request) returns (douyin_comment_list_response);
}